--- a/Quiz App/Base.lproj/Main.storyboard
+++ b/Quiz App/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                 <rect key="frame" x="167" y="526" width="46" height="30"/>
                                 <state key="normal" title="Start!"/>
                                 <connections>
-                                    <action selector="pressedStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Eb-n8-OYr"/>
+                                    <action selector="pressedStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="93I-8j-bqn"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="jJd-F4-C7g">
