--- a/Quiz App/singlePlayer.storyboard
+++ b/Quiz App/singlePlayer.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a4Z-kR-rCI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a4Z-kR-rCI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -94,7 +94,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-kb-OhX">
-                                <rect key="frame" x="161" y="20" width="53" height="38"/>
+                                <rect key="frame" x="143" y="20" width="53" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -104,10 +104,27 @@
                                 <rect key="frame" x="154" y="79" width="60" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftw-Nd-Vli">
+                                <rect key="frame" x="203" y="29" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aEr-mY-VE9"/>
                     </view>
+                    <connections>
+                        <outlet property="answerLabel_A" destination="SGI-Cc-gfz" id="60T-MI-X2f"/>
+                        <outlet property="answerLabel_B" destination="V2G-6r-y7Z" id="PVc-ed-BUM"/>
+                        <outlet property="answerLabel_C" destination="G9P-Lr-TT5" id="0Jc-mp-NvY"/>
+                        <outlet property="answerLabel_D" destination="jhM-hy-lIi" id="u0B-IL-tyY"/>
+                        <outlet property="currentQuestionNumberLabel" destination="0m6-1L-Twv" id="Ni7-VW-GDW"/>
+                        <outlet property="questionLabel" destination="iqh-pp-UbF" id="ziH-0g-Xa8"/>
+                        <outlet property="timerLabel" destination="ftw-Nd-Vli" id="RQs-d5-yvQ"/>
+                        <outlet property="totalQuestionLabel" destination="FgJ-jG-2Nc" id="GLE-ZY-SB3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="40Y-RI-epb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
